<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="2dp"
    android:layout_weight="1"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/llMain"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="2dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sState" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ToggleButton
                android:id="@+id/button5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selection"
                android:textOff=""
                android:textOn="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/button1"
                    android:layout_width="62dp"
                    android:layout_height="53dp"
                    android:layout_gravity="center"
                    android:background="@drawable/haut"
                    android:text="@string/sForward" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="8.17"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="68dp"
                        android:layout_height="54dp"
                        android:background="@drawable/gauche"
                        android:text="@string/sLeft" />

                    <Button
                        android:id="@+id/button6"
                        android:layout_width="78dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center"
                        android:background="@drawable/rotation"
                        android:text="@string/sRotate" />
                </LinearLayout>

                <Button
                    android:id="@+id/button3"
                    android:layout_width="80dp"
                    android:layout_height="56dp"
                    android:layout_gravity="right"
                    android:background="@drawable/droite"
                    android:text="@string/sRight" />
            </LinearLayout>

            <Button
                android:id="@+id/button4"
                android:layout_width="84dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/bas"
                android:text="@string/sBackward" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <SeekBar
                android:id="@+id/sbSpeed"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sSpeed" />

        <ProgressBar
            android:id="@+id/pgVoltage"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvVoltage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sVoltage" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ProgressBar
                    android:id="@+id/pgFL"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="2dip" />

                <ProgressBar
                    android:id="@+id/pgFR"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvFL"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="IR FL" />

                <TextView
                    android:id="@+id/tvFR"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="IR FR" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ProgressBar
                    android:id="@+id/pgBL"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="2dip" />

                <ProgressBar
                    android:id="@+id/pgBR"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvBL"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="IR BL" />

                <TextView
                    android:id="@+id/tvBR"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="IR BR" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvCurrent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sCurrent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <WebView
                    android:id="@+id/webView1"
                    android:layout_width="192dp"
                    android:layout_height="113dp" />

                <Button
                    android:id="@+id/buttoncamHaut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="haut" />

                <Button
                    android:id="@+id/buttoncamBas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="bas" />

                <Button
                    android:id="@+id/buttoncamInit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="initiale" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>